fixed bottom bar to overlaping the footer copyright text

--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background: #000;
-    padding: 152px 0 49px;
+    padding: 152px 0 101px;
     text-align: center;
     p{
         color: #686868;
